samples/_failures_safe/1761262764_2ea04d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_77ab15c9.c: In function ‘main’:
./samples/SAFE/__tmp_77ab15c9.c:143:9: error: expected declaration or statement at end of input
  143 |         printf("1. Add matrices (A + B)\n");
      |         ^~~~~~
./samples/SAFE/__tmp_77ab15c9.c:143:9: error: expected declaration or statement at end of input
